--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -70,32 +70,93 @@
     <div th:if="${message!=null}" class="alert-success text-center" role="alert" >
         [[${message}]]
     </div>
-    <br>
+    <div>
+        <form th:action="@{/users/page/1}" class="form-inline m-3">
+            <input type="hidden" name="sortField" th:value="${sortField}">
+            <input type="hidden" name="sortDir" th:value="${sortDir}">
+            Filter :&nbsp;
+            <input type="search" name="keyword" class="form-control" required>
+            &nbsp;&nbsp;
+            <input type="submit" value="Search" class="btn btn-success">
+            &nbsp;&nbsp;
+            <input type="button" value="Clear" class="btn btn-danger" onclick="clearFilter()">
+        </form>
+    </div>
     <div>
 
 
         <table class="table table-bordered table-striped table table-responsive-xl">
             <thead class="table-primary">
             <tr>
-                <th>User ID</th>
-                <th>Photos</th>
-                <th>Email</th>
                 <th>
-                   <a  th:if="${sortField!='firstName'}"  style="color: black"
-                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir='+ ${sortDir}}">
-                       First Name
-                   </a>
-                    <a th:if="${sortField=='firstName'}"   style="color: black"
-                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir='+ ${reverseSortDir}}">
-                        First Name
+                    <a  th:if="${sortField!='id'}"  style="color: black"
+                        th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
+                        User ID
+                    </a>
+                    <a th:if="${sortField=='id'}"   style="color: black"
+                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
+                        User ID
                     </a>
 
+                    <span th:if="${sortField=='id'}"
+                          th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+                </th>
+                <th>Photos</th>
+                <th>
+                    <a  th:if="${sortField!='email'}"  style="color: black"
+                        th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
+                        E mail
+                    </a>
+                    <a th:if="${sortField=='email'}"   style="color: black"
+                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
+                        E mail
+                    </a>
+
+                    <span th:if="${sortField=='email'}"
+                          th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+                </th>
+                <th>
+                   <a  th:if="${sortField!='firstName'}"  style="color: black"
+                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
+                       First Name
+
+                   </a>
+                    <a th:if="${sortField=='firstName'}"   style="color: black"
+                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
+                       First Name
+                    </a>
                     <span th:if="${sortField=='firstName'}"
                     th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
                 </th>
-                <th>Last Name</th>
+                <th>
+                    <a  th:if="${sortField!='lastName'}"  style="color: black"
+                        th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
+                        Last Name
+                    </a>
+                    <a th:if="${sortField=='lastName'}"   style="color: black"
+                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
+                        Last Name
+                    </a>
+
+
+                    <span th:if="${sortField=='lastName'}"
+                          th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+                </th>
                 <th>Roles</th>
-                <th>Enabled</th>
+                <th>
+                    <a  th:if="${sortField!='enabled'}"  style="color: black"
+                        th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
+                        Enable
+                    </a>
+                    <a th:if="${sortField=='enabled'}"   style="color: black"
+                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
+                        Enable
+                    </a>
+
+
+                    <span th:if="${sortField=='enabled'}"
+                          th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+                </th>
                 <th></th>
             </tr>
             </thead>
@@ -141,14 +202,14 @@
     <div class="text-center m-1" th:unless="${totalItems>0}">
         <span>No users found </span>
     </div>
-    <div>
+    <div th:if="${totalPages>1}">
         <nav>
             <ul class="pagination justify-content-center">
                 <li th:class="${currentPage>1 ? 'page-item':'page-item disabled'}">
                     <a class="page-link" th:href="@{'/users/page/1' + '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">First</a>
                 </li>
                 <li th:class="${currentPage>1 ? 'page-item':'page-item disabled'}">
-                    <a class="page-link" th:href="@{'/users/page/'+ ${currentPage-1} + '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">Previous</a>
+                    <a class="page-link" th:href="@{'/users/page/'+ ${currentPage-1 }+ '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">Previous</a>
                 </li>
                 <li th:class="${currentPage!=i ? 'page-item' : 'page-item active'}"  th:each="i:${#numbers.sequence(1,totalPages)}">
                     <a class="page-link" th:href="@{'/users/page/'+ ${i} + '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">[[${i}]]</a>
@@ -198,6 +259,9 @@ $(document).ready(function () {
         $("#confirmModel").modal();
     })
 })
+function clearFilter() {
+    window.location="[[@{/users}]]"
+}
 </script>
 </body>
 </html>
