--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -64,9 +64,15 @@
     </div>
     <div>
         <h2>Manage Users</h2>
-        <a th:href="@{/users/new}">Create New User</a>
-
+        <a th:href="@{/users/new}" class="fas fa-user-plus fa-2x icon-dark mr-2"></a>
+        &nbsp;&nbsp;
+        <a th:href="@{/users/export/csv}"  class="fa-solid fa-file-csv fa-2x mr-2"></a>
+        &nbsp;&nbsp;
+        <a th:href="@{/users/export/excel}" class="fa-solid fa-file-excel fa-2x mr-2"></a>
+        &nbsp;&nbsp;
+        <a th:href="@{/users/export/pdf}" class="fa-solid fa-file-pdf fa-2x mr-2"></a>
     </div>
+    &nbsp;&nbsp;
     <div th:if="${message!=null}" class="alert-success text-center" role="alert" >
         [[${message}]]
     </div>
@@ -77,97 +83,44 @@
             Filter :&nbsp;
             <input type="search" name="keyword" class="form-control" required>
             &nbsp;&nbsp;
-            <input type="submit" value="Search" class="btn btn-success">
+            <button type="submit"  class="btn btn-success">
+                <i class="fas fa-search fa-1x icon-dark"></i>
+            </button>
             &nbsp;&nbsp;
-            <input type="button" value="Clear" class="btn btn-danger" onclick="clearFilter()">
+            <button type="button"  class="btn btn-danger" onclick="clearFilter()">
+                <i class="fas fa-eraser fa-1x icon-dark"></i>
+            </button>
         </form>
     </div>
-    <div>
-
-
-        <table class="table table-bordered table-striped table table-responsive-xl">
+    <div class="full-details">
+        <table class="table table-bordered table-striped table table-responsive-xl ">
             <thead class="table-primary">
             <tr>
-                <th>
-                    <a  th:if="${sortField!='id'}"  style="color: black"
-                        th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
-                        User ID
-                    </a>
-                    <a th:if="${sortField=='id'}"   style="color: black"
-                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
-                        User ID
-                    </a>
-
-                    <span th:if="${sortField=='id'}"
-                          th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+                <th class="hideable-column">
+                <th th:replace="fragments::column_link('id','User ID','tag')"></th>
                 </th>
+
                 <th>Photos</th>
-                <th>
-                    <a  th:if="${sortField!='email'}"  style="color: black"
-                        th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
-                        E mail
-                    </a>
-                    <a th:if="${sortField=='email'}"   style="color: black"
-                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
-                        E mail
-                    </a>
 
-                    <span th:if="${sortField=='email'}"
-                          th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+                <th class="hideable-column">
+                <th th:replace="fragments::column_link('email','E mail','tag')"></th>
                 </th>
-                <th>
-                   <a  th:if="${sortField!='firstName'}"  style="color: black"
-                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
-                       First Name
 
-                   </a>
-                    <a th:if="${sortField=='firstName'}"   style="color: black"
-                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
-                       First Name
-                    </a>
-                    <span th:if="${sortField=='firstName'}"
-                    th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-                </th>
-                <th>
-                    <a  th:if="${sortField!='lastName'}"  style="color: black"
-                        th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
-                        Last Name
-                    </a>
-                    <a th:if="${sortField=='lastName'}"   style="color: black"
-                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
-                        Last Name
-                    </a>
-
-
-                    <span th:if="${sortField=='lastName'}"
-                          th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-                </th>
+                <th th:replace="fragments::column_link('firstName','First Name','none')"></th>
+                <th th:replace="fragments::column_link('lastName','Last Name','none')"></th>
                 <th>Roles</th>
-                <th>
-                    <a  th:if="${sortField!='enabled'}"  style="color: black"
-                        th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir='+ ${sortDir} + ${keyword!=null ? '&keyword=' + keyword: ''}}">
-                        Enable
-                    </a>
-                    <a th:if="${sortField=='enabled'}"   style="color: black"
-                       th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDir='+ ${reverseSortDir} + ${keyword!=null ? '&keyword=' +keyword : ''}}">
-                        Enable
-                    </a>
-
-
-                    <span th:if="${sortField=='enabled'}"
-                          th:class="${sortDir=='asc'? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
-                </th>
+                <th th:replace="fragments::column_link('enabled','Enable','none')"></th>
                 <th></th>
             </tr>
             </thead>
-            <tbody>
+            <tbody >
             <tr th:each="user :${listUsers}">
-                <td>[[${user.id}]]</td>
+                <td class="hideable-column">[[${user.id}]]</td>
                 <td>
                     <span th:if="${user.photos==null}" class="fas fa-regular fa-image-portrait fa-3x " style="color: blue;padding-left: 50px"></span>
                     <img  th:if="${user.photos!=null}" th:src="@{${user.photosImagePath}}" style width="80px">
                 </td>
-                <td>[[${user.email}]]</td>
+                <td class="hideable-column">[[${user.email}]]</td>
                 <td>[[${user.firstName}]]</td>
                 <td>[[${user.lastName}]]</td>
                 <td>[[${user.roles}]]</td>
@@ -185,7 +138,6 @@
                         style="color: blue;padding-left: 20px" th:href="'/users/edit/'+${user.id}"
                     title="Edit this user">
                     </a>
-
                     <a class="fa-sharp fa-solid fa-trash fa-beat fa-2x link-delete" style="color: #ec1313; padding-left:50px"
                        th:href="@{'/users/delete/'+${user.id}}"
                        th:userId="${user.id}"
@@ -196,6 +148,43 @@
             </tbody>
         </table>
     </div>
+    <div class="less-details">
+        <div th:each="user:${listUsers}" class="row m-1">
+            <div class="col-4">
+                <span th:if="${user.photos==null}" class="fas fa-regular fa-image-portrait fa-3x " style="color: blue;padding-left: 50px"></span>
+                <img  th:if="${user.photos!=null}" th:src="@{${user.photosImagePath}}" style width="80px">
+            </div>
+            <div class="col-8">
+               <div>
+                   [[${user.fullName}]]
+               </div>
+                <div>
+                    [[${user.roles}]]
+                </div>
+                <div class="mt-2">
+                    <a th:if="${user.enabled==true}" class="fas fa-check-circle fa-2x " style="color:green;padding-left: 20px"
+                       th:href="@{'/users/'+${user.id}+'/enabled/false'}"
+                       title="Disable this user"></a>
+                    <a th:if="${user.enabled==false}" class="fas fa-circle fa-2x" style="color:gray;padding-left: 20px"
+                       th:href="@{'/users/'+${user.id}+'/enabled/true'}"
+                       title="Enable this user">
+                    </a>
+                    <a  class="fa-solid fa-pen-to-square fa-2x"
+                        style="color: blue;padding-left: 20px" th:href="'/users/edit/'+${user.id}"
+                        title="Edit this user">
+                    </a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a class="fa-sharp fa-solid fa-trash fa-2x link-delete" style="color: #ec1313;"
+                       th:href="@{'/users/delete/'+${user.id}}"
+                       th:userId="${user.id}"
+                       title="Delete this user">
+                    </a>
+
+                </div>
+            </div>
+            <div>&nbsp;</div>
+        </div>
+    </div>
     <div class="text-center m-1" th:if="${totalItems>0}">
         <span>Showing users # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
     </div>
@@ -204,24 +193,29 @@
     </div>
     <div th:if="${totalPages>1}">
         <nav>
-            <ul class="pagination justify-content-center">
+            <ul class="pagination justify-content-center flex-wrap">
                 <li th:class="${currentPage>1 ? 'page-item':'page-item disabled'}">
-                    <a class="page-link" th:href="@{'/users/page/1' + '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">First</a>
+                    <a th:replace="fragments::page_link(1,'First')"></a>
+<!--                    <a class="page-link" th:href="@{'/users/page/1' + '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">First</a>-->
                 </li>
                 <li th:class="${currentPage>1 ? 'page-item':'page-item disabled'}">
-                    <a class="page-link" th:href="@{'/users/page/'+ ${currentPage-1 }+ '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">Previous</a>
+                    <a th:replace="fragments::page_link(${currentPage-1},'Previous')"></a>
+<!--                    <a class="page-link" th:href="@{'/users/page/'+ ${currentPage-1 }+ '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">Previous</a>-->
                 </li>
                 <li th:class="${currentPage!=i ? 'page-item' : 'page-item active'}"  th:each="i:${#numbers.sequence(1,totalPages)}">
-                    <a class="page-link" th:href="@{'/users/page/'+ ${i} + '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">[[${i}]]</a>
+                    <a th:replace="fragments::page_link(${i},${i})"></a>
+<!--                    <a class="page-link" th:href="@{'/users/page/'+ ${i} + '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">[[${i}]]</a>-->
                 </li>
 
 
                 <li th:class="${currentPage<totalPages ? 'page-item':'page-item disabled'}">
-                    <a class="page-link" th:href="@{'/users/page/'+${currentPage+1}+ '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">Next</a>
+                    <a th:replace="fragments::page_link(${currentPage+1},${'Next'})"></a>
+                    <!--<a class="page-link" th:href="@{'/users/page/'+${currentPage+1}+ '?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">Next</a>-->
                 </li>
 
                 <li th:class="${currentPage<totalPages ? 'page-item':'page-item disabled'}">
-                    <a class="page-link" th:href="@{'/users/page/'+${totalPages} +'?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">Last</a>
+                    <a th:replace="fragments::page_link(${totalPages},'Last')"></a>
+<!--                    <a class="page-link" th:href="@{'/users/page/'+${totalPages} +'?sortField=' + ${sortField}+ '&sortDir='+${sortDir}}">Last</a>-->
                 </li>
             </ul>
         </nav>
